gcc/testsuite/gm2/pim/fail/strconst.def
DEFINITION MODULE strconst ;

CONST
   Hello = "hello world" ;

END strconst.
